# books

./: pyproject.toml
Patterns of Enterprise Application Architecture/: metadata.json
Patterns of Enterprise Application Architecture/es/: summary.md
Patterns of Enterprise Application Architecture/es/1. Preface/: 0. Preface.md
Patterns of Enterprise Application Architecture/pt/: sumário.md
Patterns of Enterprise Application Architecture/pt/1. Prefácio/: 0. Prefácio.md
Python Fluente/: sumário.md
Python Fluente/1. Prefácio/: 00. Prefácio.md  01. Para quem é esse livro.md  02. Para quem esse livro não é.md  03. Como ler este livro.md  04. Abordagem "mão na massa".md  05. Ponto de vista: minha perspectiva pessoal.md  06. Conteúdo na Web.md  07. Convenções usadas no livro.md  08. Usando os exemplos de código.md  09. O'Reilly Online Learning.md  10. Como entrar em contato.md  11. Agradecimentos.md  12. Sobre esta tradução.md  13. Histórico das traduções.md
Python Fluente/2. Volume 1/: metadata.json
Python Fluente/2. Volume 1/1. Parte I: Estruturas de dados/: 01. O modelo de dados em Python.md  02. Uma coleção de sequências.md  05. Fábricas de classes de dados.md
Python Fluente/3. Volume 2/: metadata.json
Python Fluente/4. Volume 3/: metadata.json
Python Fluente/5. Postfácio/: footnote.md
